Redoing mojo configs